test/visibility/import/edgeCases/importChain2-qualified-error2.good
importChain2-qualified-error2.chpl:17: In function 'main':
importChain2-qualified-error2.chpl:18: error: 'C' undeclared (first use this function)
